🚧 UNDER-BUILD BRANCH: HIGHLY UNSTABLE 🚧 Started moving the API from rubenlangus's TelegramBots to pengrad's java-telegram-bot. 🚧 Cleanup code whilst I'm at it :>